Fix issue with background image collapsing when shrinking viewport, although it could use some more adjustments.

--- a/src/Aside/_Aside.scss
+++ b/src/Aside/_Aside.scss
@@ -13,7 +13,7 @@ aside {
 .aside-opening-crawl {
   margin: 25px;
   font-family: 'STARWARS';
-  letter-spacing: 2px;
+  letter-spacing: 1px;
   color: #ffd700;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
